# betterplotlib

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  __init__.py  colors.py  install_fonts.py  pyproject.toml  requirements.txt  setup.py  tools.py
.github/paused_workflows/: coverage.yaml
.github/workflows/: black.yaml  pip_upload.yaml  tests.yaml
betterplotlib/: __init__.py  _generate_interface.py  _interface.py  _tools.py  axes_bpl.py  cm.py  colors.py  figure_bpl.py  manage_axes.py  requirements.txt  styles.py  tools.py  type_checking.py
docs/: Makefile  api.rst  api_overview.rst  axes.rst  colorcycle.ipynb  conf.py  examples.ipynb  full_api.rst  index.rst  plotting_tools.rst  requirements.txt  style.rst  top_level.rst
docs/images/: demo.ipynb
docs/plots/: easy_add_text.py  hist.py  make_ax_dark.py  scatter.py
docs/sphinxext/: plot_directive.py
examples/: ppl_demo.ipynb
local_tools/: comp_images.sh  generate_interface.py  update_version.py
prettyplot/: __init__.py  colors.py  tools.py
testing/: binning_test.py  comp_images.sh  fonts_download_test.py  plots_test.py  tools_test.py  type_checking_test.py
testing/temporary_images/: .empty
